2012-04-29  Bean  <bean123ch@gmail.com>

	* grub-core/net/drivers/efi/efinet.c (get_card_packet): Fix buffer
	allocation.

2012-04-29  Mads Kiilerich  <mads@kiilerich.com> (tiny)

	* configure.ac: Detect starfield theme font path
	/usr/share/fonts/dejavu/DejaVuSans.ttf for Fedora.

2012-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/ieee1275/console.c (grub_console_dimensions): Use 80x24
	geometry on serial consoles.

2012-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/terminfo.c (grub_terminfo_readkey): Increase timeout
	because of network consoles.

2012-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/terminfo.c (grub_terminfo_getkey): Fix incorrect queue
	handling.

2012-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (read_segment): Fix the case when disknr
	falls on Q syndrom.

2012-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/nilfs2.c (grub_nilfs2_palloc_entry_offset_log):
	Fix argument to grub_nilfs2_palloc_bitmap_block_offset.

2012-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/squash4.c (lzo_decompress): Set grub_errno on error.
	Allocate at lest 8192 for temporary buffer as required for lzo.

2012-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fat.c (grub_fat_mount): Don't add logical_sector_bits
	to cluster_bits, since it's already added in.
	(grub_fat_read_data): Likewise.

2012-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c (grub_ntfs_mount): Support 256-byte sectors,
	as long as cluster size is multiple of 512 bytes.

2012-04-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Fix locale directory.

2012-04-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/hostdisk.c (map): Make static.

2012-04-23  Bean  <bean123ch@gmail.com>

	* util/grub-fstest.c (fstest): Add missing break.

2012-04-22  Samuel Thibault  <samuel.thibault@ens-lyon.org>
